# ByteNet

./: .gitignore  README.md  meson.build  setup.py
.ignore/: binary
cmd/: simple_client.cpp
examples/: simple_server.cpp
include/bytenet/: bytenet.h  network.h
src/: bytenet.cpp  network.cpp
tests/: test_network.cpp
